# calatk

./: CALATKConfig.cmake.in  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  LICENSE.txt  LICENSEInstaller.txt  README.txt  SuperBuild.cmake  TODO.txt  UseCALATK.cmake.in  WELCOME.txt  calatkConfigure.h.in
Code/: CMakeLists.txt  TODO.txt
Code/Applications/: CMakeLists.txt
Code/Applications/AtlasBuilder/: AtlasBuilder.cxx  AtlasBuilder.xml  CMakeLists.txt
Code/Applications/CALATKCommandLine/: CALATKCommandLine.cxx  CMakeLists.txt
Code/Applications/GeometricMetamorphosis/: CMakeLists.txt  GeometricMetamorphosis.cxx  GeometricMetamorphosis.xml
Code/Applications/LDDMM/: CMakeLists.txt  LDDMM.cxx  LDDMM.xml
Code/Applications/LDDMMRelaxation/: CMakeLists.txt  LDDMMRelaxation.cxx  LDDMMRelaxation.xml
Code/Applications/LDDMMShooting/: CMakeLists.txt  LDDMMShooting.cxx  LDDMMShooting.xml
Code/Applications/LongitudinalAtlasBuilder/: CMakeLists.txt  LongitudinalAtlasBuilder.cxx  LongitudinalAtlasBuilder.xml
Code/Applications/MetamorphosisShooting/: CMakeLists.txt  MetamorphosisShooting.cxx  MetamorphosisShooting.xml
Code/Applications/testme/: CMakeLists.txt  old_testme.cxx  testme.cxx  testme.xml
Code/Libraries/: CMakeLists.txt
Code/Libraries/Algorithms/: CAlgorithm.h  CAlgorithm.txx  CAlgorithmBase.cxx  CAlgorithmBase.h  CAlgorithmBase.txx  CAlgorithmFactory.cxx  CAlgorithmFactory.h  CAlgorithmFactory.txx  CAtlasBuilder.h  CAtlasBuilder.txx  CAtlasBuilderFullGradient.h  CAtlasBuilderFullGradient.txx  CAtlasBuilderSubiterationUpdate.h  CAtlasBuilderSubiterationUpdate.txx  CLDDMMGenericRegistration.h  CLDDMMGenericRegistration.txx  CLDDMMGeodesicShootingInitialImageMomentumRegistration.h  CLDDMMGeodesicShootingInitialImageMomentumRegistration.txx  CLDDMMGeometricMetamorphosisRegistration.h  CLDDMMGeometricMetamorphosisRegistration.txx  CLDDMMGrowthModelRegistration.h  CLDDMMGrowthModelRegistration.txx  CLDDMMSimplifiedMetamorphosisGeodesicShootingRegistration.h  CLDDMMSimplifiedMetamorphosisGeodesicShootingRegistration.txx  CLDDMMSpatioTemporalVelocityFieldObjectiveFunction.h  CLDDMMSpatioTemporalVelocityFieldObjectiveFunction.txx  CLDDMMSpatioTemporalVelocityFieldRegistration.h  CLDDMMSpatioTemporalVelocityFieldRegistration.txx  CLDDMMVelocityFieldRegistration.h  CLDDMMVelocityFieldRegistration.txx  CLDDMMVelocityFieldWithMomentumRegistration.h  CLDDMMVelocityFieldWithMomentumRegistration.txx  CLongitudinalAtlasBuilder.h  CLongitudinalAtlasBuilder.txx  CMakeLists.txt  CMetamorphosisGeodesicShootingInitialImageMomentumRegistration.h  CMetamorphosisGeodesicShootingInitialImageMomentumRegistration.txx
Code/Libraries/Base/: CBase.cxx  CBase.h  CMakeLists.txt  CObject.cxx  CObject.h  CProcessBase.cxx  CProcessBase.h  CProcessBase.h~
Code/Libraries/DataStructures/: CALATKCommon.cxx  CALATKCommon.h  CMakeLists.txt  VectorArray.cxx  VectorArray.h  VectorArray.txx  VectorField.cxx  VectorField.h  VectorField.txx  VectorImage.cxx  VectorImage.h  VectorImage.txx  calatkMacros.h
Code/Libraries/ImageManager/: CImageInformation.cxx  CImageInformation.h  CImageInformation.txx  CImageManager.cxx  CImageManager.h  CImageManager.txx
Code/Libraries/Interfaces/: CApplication.cxx  CApplication.h
Code/Libraries/Interpolators/: CCubicConvolutionInterpolator.cxx  CCubicConvolutionInterpolator.h  CCubicConvolutionInterpolator.txx  CFastLinearInterpolator.cxx  CFastLinearInterpolator.h  CFastLinearInterpolator.txx  CGenericInterpolator.h  CGenericInterpolator.txx  CInterpolator.h  CInterpolator.txx  CLinearInterpolator.cxx  CLinearInterpolator.h  CLinearInterpolator.txx
Code/Libraries/Kernels/: CFourierDomainKernel.cxx  CFourierDomainKernel.h  CFourierDomainKernel.txx  CGaussianKernel.cxx  CGaussianKernel.h  CGaussianKernel.txx  CHelmholtzKernel.cxx  CHelmholtzKernel.h  CHelmholtzKernel.txx  CKernel.h  CKernel.txx  CKernelFactory.cxx  CKernelFactory.h  CKernelFactory.txx  CMultiGaussianKernel.cxx  CMultiGaussianKernel.h  CMultiGaussianKernel.txx
Code/Libraries/Metrics/: CMetric.h  CMetricFactory.h  CMetricFactory.txx  CMetricSSD.cxx  CMetricSSD.h  CMetricSSD.txx
Code/Libraries/Numerics/: CEvolver.h  CEvolver.txx  CFourierDomainKernel.h  CFourierDomainKernel.txx  (+42 more)
Code/Statistics/: CMakeLists.txt
Code/Testing/: CALATKCommandLineBullseyes1DOutput_AlgorithmConfigBaseline.json  CALATKCommandLineBullseyes1DOutput_DataConfigBaseline.json  CALATKCommandLineBullseyes1D_AlgorithmConfigBaseline.json  CALATKCommandLineBullseyes2DOutput_AlgorithmConfigBaseline.json  CALATKCommandLineBullseyes2DOutput_DataConfigBaseline.json  CALATKCommandLineBullseyes2D_AlgorithmConfigBaseline.json  CALATKCommandLineBullseyes2D_DataConfigBaseline.json  CMakeLists.txt  GenerateBullseyes.cxx  GenerateBullseyesIfNeeded.cmake  RegressionTestJSON.cxx  atlas.json  atlasDataAtlasIsSourceTwoDatasets.json  atlasDataAtlasIsTargetTwoDatasets.json  calatk1DTest.cxx  calatk1DTest.json  calatkAdvancedDataConfigTest.cxx  calatkAdvancedDataConfigTestInput.json  calatkAdvancedDataConfigTestOutputBaseline.json  calatkAdvectionTest.cxx  calatkApplicationDataConfigTest.cxx  calatkApplicationDataConfigTest2.cxx  calatkApplicationDataConfigTest_CleanedAlgorithmConfigBaseline.json  calatkApplicationDataConfigTest_CleanedDataConfigBaseline.json  calatkApplicationImageFileNamesGivenTest.cxx  calatkApplicationImageFileNamesGivenTest_CleanedAlgorithmConfigBaseline.json  calatkApplicationImageFileNamesGivenTest_CleanedDataConfigBaseline.json  calatkApplicationTestAlgorithmConfig.json  calatkApplicationTestAlgorithmConfig2.json  calatkApplicationTestAlgorithmConfigImageDimensionsSpecified.json  calatkApplicationTestAlgorithmConfigImageDimensionsSpecified2.json  calatkApplicationTestDataConfig.json  calatkApplicationTestDataConfig2.json  calatkApplicationTestDataConfig2_reg.json  calatkAtlasBuilderTest.cxx  calatkBasicDataConfigTest.cxx  calatkBasicDataConfigTestInput.json  calatkBasicDataConfigTestOutputBaseline.json  calatkCStateFactoryTest.cxx  calatkCompareWarping.cxx  (+24 more)
Code/Utilities/: CMakeLists.txt  applyMap.cxx  applyMap.xml
(+292 files in other folders)
